test/typeCheckTest/pass/test7.ic
class SimpleIf {
	void testIf () {
		if (true) {
			
		} else {
		
		}
	}
	
	void main (string [] args) {
	
	}
}