test/typeCheckTest/fail/test37.ic
class BadIfCond {
	void main (string [] args) {
		if (args[0]) {
			Library.println("bad");
		} else {
			args[1] = "whoops";
		}
	}
}